# JakeLang

./: .gitignore  .gitmodules  CMakeLists.txt
extentions/jakelang-syntax-highlighting/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
extentions/jakelang-syntax-highlighting/syntaxes/: jake.tmLanguage.json
include/: ast.h  builtins.h  compiler.h  debug.h  environment.h  error.h  interpreter.h  parser.h  print.h  scanner.h  state.h  timer.h  util.h  value.h  variant.h  varient.h
include/compiler/: bytecode.h  compiler.h
include/interpreter/: interpreter.h  value.h
include/syntax/: ast.h  parser.h  scanner.h  token.h
src/: builtins.cpp  compiler.cpp  environment.cpp  interpreter.cpp  main.cpp  parser.cpp  print.cpp  scanner.cpp  state.cpp  util.cpp
src/compiler/: compiler.cpp
src/interpreter/: interpreter.cpp
src/syntax/: ast.cpp  parser.cpp  scanner.cpp
test/: code.jake  game.jake
